# manticore

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  INSTALL  ISSUES.md  LICENSE.txt  Makefile.in  README  README.md  TODO.org  TODO.txt  anyFile.txt  configure.ac  run_ci.sh  run_cont_bench.sh  supermake.sh
src/benchmarks/: README  configure.ac
src/benchmarks/autom4te.cache/: output.0  requests  traces.0
src/benchmarks/bench-barnes-hut/: Makefile  README  barnes-hut.pml  barnes-hut.sml
src/benchmarks/bench-fib/: fib.pml  pfib.mlb  pfib.pml
src/benchmarks/bench-functional-pmergesort/: bench-pmergesort.pml  pmergesort-fn.sml  pmergesort-with-seq-bc-fn.sml  pmergesort-with-seq-bc.pml  pmergesort.mlb  pmergesort.pml  pmergesort.sml  ropes-sig.sml  sources.cm  test-pmergesort.pml  test-pmergesort.sml
src/benchmarks/bench-n-queens/: n-queens-seq.pml  n-queens.pml
src/benchmarks/bench-pmergesort/: pmergesort-unrolled.pml  pmergesort.mlb  pmergesort.pml
src/benchmarks/bench-ray-tracer/: ray-tracer-seq.pml  ray-tracer.pml
src/benchmarks/bench-rt/: ray-tracer.pml  ray-tracer.s  ray-tracer.sml  raytracer.s
src/benchmarks/common/: run-main.sml  run-par.mlb  run-par.pml  run-seq.sml
src/benchmarks/config/: aclocal.m4
src/benchmarks/db/: Context.java  DataBlob.java  Experiment.java  GC.java  Problem.java  README  Run.java  TODO  Utils.java  compile.sh  run.sh
src/benchmarks/graphs/: README
src/benchmarks/input-data/: spheres.txt
src/benchmarks/lib/int-rope/: manticore.mlb  rope-ty.pml  rope.pml  vector-seq.pml
src/benchmarks/lib/par-rope-lib/: eg.cm  eg1.sml  eg2.sml  eg3.sml  ex-map-sum.sml  list-seq.sml  mlton.mlb  rope-fn.sml  rope-impl-fn.sml  rope-pair-fn.sml  rope-pair-sig.sml  rope-permute-fn.sml  rope-permute-sig.sml  rope-scan-fn.sml  rope-scan-sig.sml  rope-sig.sml  rope-ty-fn.sml  rope-ty-sig.sml  runtime-sig.sml  seq-pair-sig.sml  seq-sig.sml  sequential-runtime.sml  sources.cm  splitting-strategy.sml  test-rope.sml  test.cm  test.sml  testropepair.sml  vector-seq-pair.sml  vector-seq.sml  zipper1-fn.sml  zipper2-fn.sml
src/benchmarks/lib/rope.old/: either.pml  progress-ty.pml  rope-pair.pml  rope-permute.pml  rope-scan.pml  rope-ty.pml  rope.mlb  rope.pml  runtime.pml  sequential-runtime.pml  splitting-strategy.pml  vector-seq-pair.pml  vector-seq.pml  zipper1.pml  zipper2.pml
src/benchmarks/plot/: branches.py  collect_data.py  connect_manticore_db.py  human_readable.py  leaf_experiment.py  leaf_size_experiment.py  line_plot.py  rope_splitting_experiment.py  speedup.py  speedups.py  table.py  utils.py
src/benchmarks/programs/: Makefile.in
src/benchmarks/programs/ams-flat-arith/: build-all  flat-arith.c  flat-arith.pml  pml.mlb
src/benchmarks/programs/ams-flat-flops/: build-all  flat-flops.c  flat-flops.pml  pml.mlb
src/benchmarks/programs/ams-mandelbrot/: build-all  mandelbrot.c  mandelbrot.pml  mandelbrot.sml  pml.mlb  swp.mlb  swp.pml
src/benchmarks/programs/ams-mandelbulb/: build-all  mandelbulb.c  mandelbulb.pml  pml.mlb
src/benchmarks/programs/ams-mmm/: build-all  mmm.pml  pml.mlb
src/benchmarks/programs/ams-nested-firsts/: build-all  mlton.mlb  nested-firsts.pml  nested-firsts.sml  pml.mlb
src/benchmarks/programs/ams-nested-sums/: mlton.mlb  nested-sums.pml  nested-sums.sml  pml.mlb
src/benchmarks/programs/ams-raytracer/: ams-mc.mlb  ams-raytracer.pml  blue.pml  build-all  id-raytracer.sml  mlton.mlb  pml.mlb  smlnj.cm  swp-raytracer.pml  swp.mlb
src/benchmarks/programs/ams-seg-sum/: add-into.pml  build-all  mlton.mlb  nested-pml.mlb  nested-seg-sum.pml  pml.mlb  seg-sum.pml  seg-sum.sml  simple-seg-sum.sml  swp-seg-sum.pml  swp.mlb
src/benchmarks/programs/ams-smvm/: build-both  mlton.mlb  pml.mlb  smlnj.cm  smvm.pml  smvm.sml  swp-mc.mlb
src/benchmarks/programs/barnes-hut/: Makefile  NBodyGen.hs  barnes-hut-seq.mlb  barnes-hut-seq.pml  barnes-hut.mlb  barnes-hut.pml  barnes-hut.sml  bench-barnes-hut-seq.pml  bench-barnes-hut.pml  gen-bodies-mlton.mlb  gen-bodies.cm  gen-bodies.pml  gen-bodies.sh  gen-bodies.sml  mc.mlb  mlton.mlb  smlnj.cm
src/benchmarks/programs/black-scholes/: black-scholes.sml  smlnj.cm
src/benchmarks/programs/cml-merge/: Makefile.in  mc.mlb  merge.sml  merge1.pml  merge2.pml  smlnj.cm
src/benchmarks/programs/cml-parallelpp/: mc.mlb  parallel-pp.sml  parallel-pp1.pml  parallel-pp2.pml
src/benchmarks/programs/cml-pingpong/: DATA  Makefile.in  README  mc.mlb  pingpong.sml  pingpong1.pml  pingpong2.pml  run.sh  smlnj.cm
src/benchmarks/programs/cml-primes/: DATA  DATA-20090301-2049  Makefile.in  mc.mlb  primes.sml  primes1.pml  primes2.pml  primes3.pml  run.sh
src/benchmarks/programs/cml-prims/: primes.sml  primes1.pml  sources.cm
src/benchmarks/programs/cml-ring/: ring-cml.sml
src/benchmarks/programs/cml-spawn/: Makefile.in  README  mc.mlb  spawn.pml  spawn.sml  spawn1.pml  spawn2.pml
src/benchmarks/programs/dense-matrix-multiply/: dense-matrix-multiply.pml  dense-matrix-multiply.sml  mc.mlb  mlton.mlb  smlnj.cm
src/benchmarks/programs/fib/: pfib.mlb  pfib.pml
src/benchmarks/programs/fib-array/: fib-array.pml  fib-array.sml
src/benchmarks/programs/id-raytracer/: ams-mc.mlb  ams-raytracer.pml  id-raytracer.pml  id-raytracer.sml  mc.mlb  ray-tracer-seq.mlb  ray-tracer-seq.pml  ray-tracer.mlb  ray-tracer.pml
src/benchmarks/programs/in-place-pmergesort/: pmergesort-unrolled.pml  pmergesort.pml
src/benchmarks/programs/life/: life-sequential.pml
src/benchmarks/programs/life-seq/: life-seq.pml  mc.mlb  run_sh.in
src/benchmarks/programs/mandelbrot/: bench-mandelbrot.pml  mandelbrot.mlb  (+4 more)
src/benchmarks/scripts/: README  benchmark-bh.bsh  benchmark-parr.bsh  benchmark.bsh  experiment_mlton_sh.in  experiment_sh.in  gen_all_makefiles_sh.in  gen_input_data_sh.in  gen_leaf_size_experiment_sh.in  gen_makefile_sh.in  gen_profile_rope_split_sh.in  gen_rope_split_experiment_sh.in  gen_run_sh.in  gen_speedup_experiment_sh.in  gen_sst_experiment_sh.in  set-max-leaf-size.bsh  work_stealing_stats_sh.in
src/tools/event-parser/: GhcEvents.hs  README.md  ghc-events.cabal
(+4346 files in other folders)
